# recode

./: .gitignore  Cargo.toml  README.md  TODO.md  recode.toml
.github/workflows/: ci.yml  release.yml
crates/recode-cli/: Cargo.toml
crates/recode-cli/src/: main.rs
crates/recode-core/: Cargo.toml
crates/recode-core/src/: config.rs  engine.rs  executor.rs  lib.rs  model.rs  storage.rs
crates/recode-tui/: Cargo.toml
crates/recode-tui/src/: main.rs
docs/: PRD.en.md  PRD.ko.md  Recode-PRD.html
docs/adr/: 0001-execution-engine-foundation.md  0002-minimal-configuration-system.md  0003-retry-timeout-policy.md
