[package]
name = "recode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
tempfile = "3"
