[package]
name = "recode-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
recode-core = { path = "../recode-core" }
serde_json.workspace = true
uuid.workspace = true
